final pass #1. Fixed typos and removed unused css

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -73,14 +73,13 @@
                         </li>
                         <li class="list-inline-item"><a href="/about" class="text-light">About
                                 Us</a></li>
-                        <li class="list-inline-item"><a href="/contact" class="text-light">Contact</a></li>
+                        <li class="list-inline-item"><a href="/contact" class="text-light">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </footer>
 
-    <!-- Bootstrap 5 Bundle (includes Popper) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
         crossorigin="anonymous"></script>
