--- a/src/about.njk
+++ b/src/about.njk
@@ -10,12 +10,17 @@
     <!-- Hero card content -->
     <div class="hero-card text-start p-5">
         <h1 class="display-5 fw-bold mb-1 pt-3 pb-4 p-2">
-            Tired of Managing Your Company’s Finances alone?
+            <!-- Tired of Managing Your Company’s Finances alone? -->
+            Should be doing better...
+            <br>
+            Why aren't you more financially secure and spending more time doing your favorite things?
         </h1>
 
         <p class="text-light mb-3 pt-3 pb-4 p-2">
-            At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is <br>here to
-            help.
+            At Mojo CFO, we're your modern finance and accounting partner for success with the expertise necessary to
+            set you up for success.
+            <!-- At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is <br>here to -->
+            <!-- help. -->
         </p>
 
         <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" class="btn btn-dark hero-btn px-4 py-2 w-lg-50 w-75"
@@ -31,48 +36,37 @@
     <div class="container px-5 photo-text-container">
         <h1 class="text-center mb-5 team-heading">Our Leadership</h1>
 
-        <!-- begin grey wrapper -->
         <div class="team-content-gray">
-
-            <!-- two-column row -->
-            <div class="row">
-                <div class="col-md-6 text-start order-2 order-md-1">
-                    <h3 class="name-title">The Leader Behind Mojo CFO</h3>
-                    <h4 class="name-position pt-3">
-                        The Visionary Behind Our Organization
-                    </h4>
-                    <p class="name-paragraph pt-3">
-                        As President of Mojo CFO, Joe leads a team of Fractional CFOs to support
-                        value-oriented CEOs and owners in America’s backbone businesses.
-                        <br><br>
-                        Raised in a rural town in Western Maryland on a hundred-plus acre Black
-                        Angus
-                        Cattle Farm, Joe was brought up with core values that align with Mojo
-                        CFO’s
-                        approach to business. Honesty, transparency, hard work, persistence and
-                        service
-                        are at the heart of everything we do. As the President and Lead CFO at
-                        Mojo CFO,
-                        Joe heads the firm’s finance and accounting advisory service lines.
-                    </p>
-                </div>
-
-                <div class="col-md-6 text-center mb-4 mb-md-0 img-div order-1 order-md-2">
-                    <img src="/assets/images/profile2.png" alt="Joseph Melville" class="w-100 h-90 scaled-img">
-                </div>
+            <div class="text-start mb-0">
+                <h3 class="name-title">The Leader Behind Mojo CFO</h3>
+                <h4 class="name-position pt-3">
+                    The Visionary Behind Our Organization
+                </h4>
             </div>
 
-            <!-- full-width text under columns -->
-            <div class="text-section px-3">
+            <div class="text-section">
+                As President of Mojo CFO, Joe leads a team of Fractional CFOs to support
+                value-oriented leaders across businesses and organizations in America.
+                <br><br>
+                Raised in a rural town in Western Maryland on a hundred-plus acre Black
+                Angus
+                Cattle Farm, Joe was brought up with core values that align with Mojo
+                CFO’s
+                approach to business. Honesty, transparency, hard work, persistence and
+                service
+                are at the heart of everything we do. As the President of Mojo CFO,
+                Joe heads the firm’s finance and accounting advisory service lines.
+                <br><br>
                 He brings his wealth of experience and expertise to the table when crafting
-                custom finance and accounting solutions in simple and even the most challenging
+                full service custom finance and accounting solutions in simple and even the most challenging
                 circumstances. He seeks to effectively help create more free time, more profits
-                and more prosperity for the clients he serves. Joe’s background and experience spans
-                across working as a full-time, interim or
+                and more overall prosperity for the clients he serves. Joe’s background and experience spans
+                across working in a number of different roles in finance or accounting capacity including as a full
+                time, interm or
                 fractional CFO for a number of different organizations. Professionally, he has managed
-                financial operations for organizations to ensure compliance, accuracy and efficient
-                financial operations. To date, he has personally worked with dozens of clients,
-                supporting companies with annual revenues ranging from $1 to $100 million.
+                accounting and financial operations for organizations to ensure compliance, accuracy and optimal
+                success. To date, he has personally worked with dozens of clients,
+                supporting companies with annual revenues ranging from $1 million to $100 million.
                 <br><br>
                 Beyond that, he is deeply committed to community service and development. Under his
                 leadership, Mojo CFO donates 10% of its profits to support local non-profits, churches
@@ -108,27 +102,32 @@
                     <ul class="list-unstyled mb-0 ps-2">
                         <li class="d-flex align-items-center text-white py-2 border-bottom border-secondary">
                             <i class="bi bi-bar-chart-line fs-3 text-info me-3"></i>
-                            <span>Bring us your top problem. We bring top solutions.</span>
+                            <span>Bring us your problems. We bring expert solutions.</span>
                         </li>
                         <li class="d-flex align-items-center text-white py-2 border-bottom border-secondary">
                             <i class="bi bi-speedometer2 fs-3 text-info me-3"></i>
-                            <span>We seek to exceed client expectations. Always.</span>
+                            <span>We exceed client expectations. Always.</span>
                         </li>
                         <li class="d-flex align-items-center text-white py-2 border-bottom border-secondary">
                             <i class="bi bi-shield-lock fs-3 text-info me-3"></i>
-                            <span>We act with integrity. We serve as a ‘we’ with the
-                                clients. We strive to be an extension of our client's
-                                teams, therefore, we don't address clients as "you", we
-                                say and act "we". We always put ourselves in the shoes
-                                of our clients and ask, "Would I make this same
-                                decision I am recommending if it was my
-                                business?"</span>
+                            <!-- <span>We act with integrity. We serve as a ‘we’ with our -->
+                            <!--     clients. We become a partner with our clients, an extension of your -->
+                            <!--     team. Therefore, we don't address our clients as "you", we -->
+                            <!--     say and act "we". We always put ourselves in your shoes and ask, "Would I make this same -->
+                            <!--     decision I am recommending if this was my -->
+                            <!--     organization?". </span> -->
+                            <span>We act with integrity. We serve as a ‘we’ with our clients. We become a partner with
+                                our clients, an extension of your team. Therefore, we don't address our clients as
+                                "you"; we say and act "we." We always put ourselves in your shoes and ask, "Would I make
+                                this same decision I am recommending if this were my organization?" </span>
                         </li>
                         <li class="d-flex align-items-center text-white py-2 border-bottom-0">
                             <i class="bi bi-graph-up fs-3 text-info me-3"></i>
-                            <span>We serve with empathy. Businesses are babies to business
-                                owners and finances can be a stressful topic. We seek to
-                                walk in our client's shoes when presenting advice.</span>
+                            <!-- <span>We serve with empathy. Businesses are babies to business -->
+                            <!--     owners and finances can be a stressful topic. We seek to -->
+                            <!--     walk in our client's shoes when presenting advice.</span> -->
+                            <span>We serve with empathy; running organizations and managing finances can be a stressful
+                                topic. We walk in your shoes when we present our solutions.</span>
                         </li>
                     </ul>
                 </div>
@@ -145,12 +144,16 @@
             LET'S GET STARTED
         </h3>
         <h2 class="cta-title-h2 text-white p-3">
-            READY TO TRANSFORM YOUR FINANCIAL STRATEGY?
+            <!-- READY TO TRANSFORM YOUR FINANCIAL STRATEGY? -->
+            UNLOCK PROSPERITY WITH OUR AI POWERED SOLUTIONS AND PERSONAL EXPERTISE
         </h2>
         <p class="cta-text text-white mb-4 p-2">
-            Schedule a financial clarity call with Mojo CFO today and take the first step toward achieving your
-            business’ goals. Whether you are looking for financial insights, cash flow management, or growth financing,
-            our team is here to help.
+            <!-- Schedule a financial clarity call with Mojo CFO today and take the first step toward achieving your -->
+            <!-- business’ goals. Whether you are looking for financial insights, cash flow management, or growth financing, -->
+            <!-- our team is here to help. -->
+            Schedule a free consultation with Mojo CFO today and take the first step towards doing better...<br>
+            A life with more financial security and more free time to do your favourite things.<br>
+            For one flat rate, we are here to help.
         </p>
         <a href="https://forms.gle/qASLJYMZ4VmgzvQUA" target="_blank" class="btn btn-primary btn-lg cta-btn">
             Let's Have a Conversation
