--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -10,7 +10,8 @@
         url("/assets/images/contact_hero.jpg");
     background-size: cover;
     background-position: center;
-    height: auto;
+    /* height: auto; */
+    height: 900px;
     display: flex;
     padding: 2rem;
     padding-left: 12%;
@@ -27,18 +28,18 @@
 }
 
 .hero .hero-card>h1.display-5 {
-    font-size: 70px;
+    font-size: 55px;
     font-weight: 900 !important;
     text-transform: uppercase;
     color: #FFFFFF;
 }
 
-.hero .hero-card p {
-    font-size: 21px;
-    font-weight: 400;
-    line-height: 30px;
-    color: #FFFFFF;
-}
+/* .hero .hero-card p { */
+/*     font-size: 21px; */
+/*     font-weight: 400; */
+/*     line-height: 30px; */
+/*     color: #FFFFFF; */
+/* } */
 
 .hero-btn {
     background-color: var(--primary-color);
@@ -140,10 +141,13 @@
    NEW: grey “bleed” wrapper
    ------------------------ */
 .team-content-gray {
-    background: linear-gradient(to bottom,
-            rgba(255, 255, 255, 1) 35%,
-            #e8eef2 37%);
-    /*background-color: #e8eef2;*/
+    /* background: linear-gradient(to bottom, */
+    /*         rgba(255, 255, 255, 1) 35%, */
+    /*         #e8eef2 37%); */
+    /* /*background-color: #e8eef2;*/
+    /* padding: 2rem 5%; */
+    /* margin-bottom: 2rem; */
+    background: #e8eef2;
     padding: 2rem 5%;
     margin-bottom: 2rem;
 }
@@ -365,7 +369,7 @@
 .cta-text {
     font-size: 24px;
     font-weight: 500;
-    max-width: 600px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
