--- a/src/contact.njk
+++ b/src/contact.njk
@@ -12,9 +12,8 @@
         <h1 class="display-5 fw-bold mb-1">
             WE'D LOVE TO HEAR FROM YOU!
         </h1>
-
-        <p class="fs-5 text-light mb-3" style="">
-            Fill out the form below, and one of our team members will get back to you as soon as possible.
+        <p class="text-light mb-3" style="">
+            Fill out the form below and one of our team members will get back to you as soon as possible.
         </p>
     </div>
 </div>
@@ -27,15 +26,17 @@
                 <h2 class="h4 text-uppercase mb-3">
                     LET'S CONNECT
                 </h2>
-                <h3 class="mb-3 second-title" style="font-size: 3.0rem; font-weight: 600;">Your <strong>Partner</strong>
-                    in
-                    Financial<br>Growth Awaits
+                <h3 class="mb-4 second-title" style="font-size: 3.0rem; font-weight: 600;">
+                    Your <strong>Modern </strong>Finance <br> and Accounting Partner for Success Awaits
                 </h3>
                 <p class="mb-4">
-                    We’d love to hear from you! Whether you have questions about our services, need assistance, or are
-                    ready to schedule a consultation, our team is here to help.
+                    <!-- We’d love to hear from you! Whether you have questions about our services, need assistance, or are -->
+                    <!-- ready to schedule a consultation, our team is here to help. -->
+                    We'd love to hear from you! Whether you need a quick favor, you have questions about our services,
+                    need ongoing assistance or simply want to schedule a consultation, our team is here to help.
                 </p>
                 <p class="mb-4">
+                    <!-- Fill out the form below, and one of our experts will get back to you promptly. -->
                     Fill out the form below, and one of our experts will get back to you promptly.
                 </p>
                 <p class="mb-4">
